# Mash-Up

./: LICENSE  README.md  pyproject.toml
.github/workflows/: style-checks.yml
mash/: __init__.py  config.py  mixer.py  song.py
mashup/: mixer.py  song.py
